--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 /* Body and background styling */
 body {
-  font-family: 'Aleo', serif;
+  font-family: 'Economica', sans-serif;
   height: 100vh;
   display: flex;
   flex-direction: column; /* Allows footer to stay at the bottom */
@@ -105,7 +105,6 @@ button:hover {
 footer {
   background-color: black;
   color: white;
-  font-family: 'Aleo', serif;
   width: 100%;
   box-sizing: border-box;
   text-align: center;
